--- a/kitty.conf
+++ b/kitty.conf
@@ -6,6 +6,8 @@ map alt+d launch --location=hsplit
 map alt+shift+d launch --location=vsplit
 map alt+x close_window
 
+enable_audio_bell no
+
 background #201c1c
 background_opacity 1.0
 foreground #ebdbb2
