--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,8 @@ tab_bar_style hidden
 inactive_text_alpha 0.87
 confirm_os_window_close 0
 
+cursor_blink_interval 0
+
 map alt+d launch --location=hsplit
 map alt+shift+d launch --location=vsplit
 map alt+x close_window
